--- a/requirements.txt
+++ b/requirements.txt
@@ -37,40 +37,40 @@ uptime==3.0.1
 ###########################################################
 
 # checks.d/sqlserver.py
-adodbapi==2.6.0.7
-pyro4==4.35 # required by adodbapi
+#adodbapi==2.6.0.7
+#pyro4==4.35 # required by adodbapi
 
 # checks.d/riak.py
-httplib2==0.9
+#httplib2==0.9
 
 # checks.d/kafka_consumer.py
-kafka-python==0.9.3
+#kafka-python==0.9.3
 
 # checks.d/postgres.py
-pg8000==1.10.1
+#pg8000==1.10.1
 
 # checks.d/mysql.py
-pymysql==0.6.6
+#pymysql==0.6.6
 
 # checks.d/gearman.py
-gearman==2.0.2
+#gearman==2.0.2
 
 # checks.d/mcache.py
-python-memcached==1.53
+#python-memcached==1.53
 
 # checks.d/redis.py
-redis==2.10.3
+#redis==2.10.3
 
 # checks.d/vsphere.py
-pyvmomi==6.0.0
+#pyvmomi==6.0.0
 
 # checks.d/hdfs.py
-snakebite==1.3.11
+#snakebite==1.3.11
 
 # utils/platform.py
-docker-py==1.3.1
+#docker-py==1.3.1
 
 # checks.d/dns_check.py
-dnspython==1.12.0
+#dnspython==1.12.0
 
 paho-mqtt
