--- a/requirements.txt
+++ b/requirements.txt
@@ -68,7 +68,7 @@ uptime==3.0.1
 #snakebite==1.3.11
 
 # utils/platform.py
-#docker-py==1.3.1
+docker-py==1.3.1
 
 # checks.d/dns_check.py
 #dnspython==1.12.0
